# ai-style-designer

./: .gitignore  README.md  package.json
Tools/: theme-designer.html
Tools/themes/: default.json  default.stylesystem.json
scripts/: generate_theme.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
