[package]
name = "ai-style-designer"
version = "0.1.0"
description = "AI-powered aesthetic style designer for audio plugin UIs"
authors = []
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

[target.'cfg(debug_assertions)'.dependencies]
tauri-plugin-webdriver = "0.2.1"
